Added TypeFactory